# clogg

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/clogg/: logger.h  writer.h
src/: logger.cpp  writer.cpp
test/: Makefile  main.cpp
